# tco_post_engine

./: .env.example  .gitignore  A0_product_selector_dev_plan.md  Baby_category_consumables_reference.md  CLAUDE.md  Category consumables reference.md  Pet category consumables reference.md  RUNBOOKV2.md  RUNBOOKV3.2.md  RUNBOOKV3.md  dev_agent.md  insert_a0_to_db.py  pyproject.toml  requirements.txt  start-team.sh  test_a0_razor.py  test_image_extract.py
.coordination/: api-contract.json  blockers.md  status-partA.md  status-partB.md  status.md
.prompts/: lead.md  part-a.md  part-b.md  start-lead.sh  start-part-a.sh  start-part-b.sh
config/: .env.example  affiliate_links.json  category_air_fryer.yaml  category_air_purifier.yaml  category_auto_cat_litter.yaml  category_auto_feeder.yaml  category_cat_litter.yaml  category_cat_scratcher.yaml  category_cat_tower.yaml  category_cat_toy.yaml  category_cat_water_fountain.yaml  category_clothing_care.yaml  category_dehumidifier.yaml  category_diaper_pail.yaml  category_dog_food.yaml  category_dog_stairs.yaml  category_dryer.yaml  category_electric_shaver.yaml  category_food_waste_processor.yaml  category_formula_maker.yaml  category_hair_dryer.yaml  category_handy_vacuum.yaml  category_humidifier.yaml  category_microwave.yaml  category_pet_deodorizer.yaml  category_pet_gps_tracker.yaml  category_pet_potty_pad.yaml  category_pet_water_fountain.yaml  category_robot_vacuum.yaml  category_washing_machine.yaml  category_water_purifier.yaml  category_wireless_cleaner.yaml  products_robot_vacuum.yaml  products_wireless_cleaner.yaml  (+1 more)
(+146 files in other folders)
