[project]
name = "tco-post-engine"
version = "0.1.0"
description = "TCO-Driven Affiliate Marketing Automation System"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
